--- a/app/static/css/new_post.css
+++ b/app/static/css/new_post.css
@@ -145,6 +145,10 @@
     cursor: pointer;
 }
 
+.posts-actions .new-post .new-post-inputs #CK1 {
+    display: none;
+}
+
 .posts-actions .new-post .new-post-inputs .submit {
     border-radius: 0;
     border: 0 none;
