--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -3,19 +3,19 @@
     <div class="footer-2part">
         <div class="social">
             <a href="">
-                <img src="{{ url_for('static', filename='/images/Instagram.svg') }}"/>
+                <i class="fab fa-instagram"></i>
             </a>
             <a href="">
-                <img src="{{ url_for('static', filename='/images/Twitter.svg') }}"/>
+                <i class="fab fa-twitter"></i>
             </a>
             <a href="">
-                <img src="{{ url_for('static', filename='/images/Youtube.svg') }}"/>
+                <i class="fab fa-facebook"></i>
             </a>
             <a href="">
-                <img src="{{ url_for('static', filename='/images/Discord.svg') }}"/>
+                <i class="fab fa-discord"></i>
             </a>
             <a href="">
-                <img src="{{ url_for('static', filename='/images/Reddit.svg') }}"/>
+                <i class="fab fa-reddit"></i>
             </a>
         </div>
         <div class="site-name">©maisgamer.com 2020</div>
