--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -22,7 +22,7 @@
         </div>
         {% if current_user.is_authenticated %}
         <input type="checkbox" id="mo1" class="input-second-options-mobile">
-            <label for="mo1" class="header-1part-1opc" id="header-login">{{ current_user.name }} <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-right" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg></label>
+            <label for="mo1" class="header-1part-1opc" id="header-login"><i class="fas fa-user-circle" style="margin-right: 10px; font-size: 30px;"></i>{{ current_user.name }} <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-right" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg></label>
             <div class="second-options-mobile" id="som-1">
                 <div class="second-options-mobile-header">
                     <label class="back" for="mo1"><svg width="8" height="5" viewBox="0 0 8 5" class="arrow-left" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg>Voltar</label>
@@ -30,28 +30,28 @@
                 </div>
                     {% if current_user.is_admin == 1 %}
                         <div class="options-mobile">
-                            <a href="{{ url_for('admin') }}" id="mo" class="post">PAINEL DE ADMINISTRADOR</a>
-                            <a href="{{ url_for('posts') }}" id="mo" class="post">POSTAGENS</a>
-                            <a href="{{ url_for('profile') }}" id="mo" class="post">MEU USUÁRIO</a>
-                            <a href="{{ url_for('logout') }}" id="mo" class="logout">ENCERRAR SESSÃO</a>
+                            <a href="{{ url_for('admin') }}" id="mo" class="post"><i class="fas fa-crown" style="margin-right: 10px;"></i>PAINEL DE ADMINISTRADOR</a>
+                            <a href="{{ url_for('posts') }}" id="mo" class="post"><i class="far fa-file-alt" style="margin-right: 10px;"></i>POSTAGENS</a>
+                            <a href="{{ url_for('profile') }}" id="mo" class="post"><i class="fas fa-user" style="margin-right: 10px;"></i>MEU USUÁRIO</a>
+                            <a href="{{ url_for('logout') }}" id="mo" class="logout"><i class="fas fa-sign-out-alt" style="margin-right: 10px;"></i>ENCERRAR SESSÃO</a>
                         </div>
                     {% elif current_user.is_poster == 1 %}
                         <div class="options-mobile">
-                            <a href="{{ url_for('posts') }}" id="mo" class="post">POSTAGENS</a>
-                            <a href="{{ url_for('profile') }}" id="mo" class="post">MEU USUÁRIO</a>
-                            <a href="{{ url_for('logout') }}" id="mo" class="logout">ENCERRAR SESSÃO</a>
+                            <a href="{{ url_for('posts') }}" id="mo" class="post"><i class="far fa-file-alt" style="margin-right: 10px;"></i>POSTAGENS</a>
+                            <a href="{{ url_for('profile') }}" id="mo" class="post"><i class="fas fa-user" style="margin-right: 10px;"></i>MEU USUÁRIO</a>
+                            <a href="{{ url_for('logout') }}" id="mo" class="logout"><i class="fas fa-sign-out-alt" style="margin-right: 10px;"></i>ENCERRAR SESSÃO</a>
                         </div>
                     {% else %}
                         <div class="options-mobile">
-                            <a href="{{ url_for('profile') }}" id="mo" class="post">MEU USUÁRIO</a>
-                            <a href="{{ url_for('logout') }}" id="mo" class="logout">ENCERRAR SESSÃO</a>
+                            <a href="{{ url_for('profile') }}" id="mo" class="post"><i class="fas fa-user" style="margin-right: 10px;"></i>MEU USUÁRIO</a>
+                            <a href="{{ url_for('logout') }}" id="mo" class="logout"><i class="fas fa-sign-out-alt" style="margin-right: 10px;"></i>ENCERRAR SESSÃO</a>
                         </div>
                     {% endif %}
             </div>
             {% else %}
             <div class="header-1part-1opc" id="header-login">
-                <a class="login" href="{{ url_for('login') }}">ENTRAR</a>
-                <a class="register" href="{{ url_for('register') }}">REGISTRAR-SE</a>
+                <a class="login" href="{{ url_for('login') }}"><i class="fas fa-sign-in-alt" style="margin-right: 10px;"></i>ENTRAR</a>
+                <a class="register" href="{{ url_for('register') }}"><i class="fas fa-user-plus" style="margin-right: 10px;"></i>REGISTRAR-SE</a>
             </div>
         {% endif %}
         <a href="{{ url_for('index') }}" class="header-1part-1opc">PÁGINA INICIAL</a>
@@ -101,47 +101,49 @@
         <div class="user-informations">
             {% if current_user.is_authenticated %}
                 <div class="user">
-                    <a class="user-name">{{ current_user.name }}
+                    <a class="user-name">
+                        <i class="fas fa-user-circle" style="font-size: 25px;"></i>
+                            {{ current_user.name }}
                         <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-down" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg>
                     </a>
                     <ul class="options">
                         {% if current_user.is_admin == 1 %}
                             <li class="user-options">
-                                <a href="{{ url_for('admin') }}" class="post">PAINEL DE ADMINISTRADOR</a>
+                                <a href="{{ url_for('admin') }}" class="post"><i class="fas fa-crown" style="margin-right: 10px;"></i>PAINEL DE ADMINISTRADOR</a>
                             </li>
                             <li class="user-options">
-                                <a href="{{ url_for('posts') }}" class="post">POSTAGENS</a>
+                                <a href="{{ url_for('posts') }}" class="post"><i class="far fa-file-alt" style="margin-right: 10px;"></i>POSTAGENS</a>
                             </li>
                             <li class="user-options">
-                                <a href="{{ url_for('profile') }}" id="mo" class="post">MEU USUÁRIO</a>
+                                <a href="{{ url_for('profile') }}" id="mo" class="post"><i class="fas fa-user" style="margin-right: 10px;"></i>MEU USUÁRIO</a>
                             </li>
                             <li class="user-options">
-                                <a href="{{ url_for('logout') }}" class="logout">ENCERRAR SESSÃO</a>
+                                <a href="{{ url_for('logout') }}" class="logout"><i class="fas fa-sign-out-alt" style="margin-right: 10px;"></i>ENCERRAR SESSÃO</a>
                             </li>
                         {% elif current_user.is_poster == 1 %}
                             <li class="user-options">
-                                <a href="{{ url_for('posts') }}" class="post">POSTAGENS</a>
+                                <a href="{{ url_for('posts') }}" class="post"><i class="far fa-file-alt" style="margin-right: 10px;"></i>POSTAGENS</a>
                             </li>
                             <li class="user-options">
-                                <a href="{{ url_for('profile') }}" id="mo" class="post">MEU USUÁRIO</a>
+                                <a href="{{ url_for('profile') }}" id="mo" class="post"><i class="fas fa-user" style="margin-right: 10px;"></i>MEU USUÁRIO</a>
                             </li>
                             <li class="user-options">
-                                <a href="{{ url_for('logout') }}" class="logout">ENCERRAR SESSÃO</a>
+                                <a href="{{ url_for('logout') }}" class="logout"><i class="fas fa-sign-out-alt" style="margin-right: 10px;"></i>ENCERRAR SESSÃO</a>
                             </li>
                         {% else %}
                             <li class="user-options">
-                                <a href="{{ url_for('profile') }}" id="mo" class="post">MEU USUÁRIO</a>
+                                <a href="{{ url_for('profile') }}" id="mo" class="post"><i class="fas fa-user" style="margin-right: 10px;"></i>MEU USUÁRIO</a>
                             </li>
                             <li class="user-options">
-                                <a href="{{ url_for('logout') }}" class="logout">ENCERRAR SESSÃO</a>
+                                <a href="{{ url_for('logout') }}" class="logout"><i class="fas fa-sign-out-alt" style="margin-right: 10px;"></i>ENCERRAR SESSÃO</a>
                             </li>
                         {% endif %}
                     </ul>
                 </div>
             {% else %}
                 <div class="auth">
-                    <a href="{{ url_for('login') }}" class="signin">ENTRAR</a>
-                    <a href="{{ url_for('register') }}" class="signup">REGISTRAR-SE</a>
+                    <a href="{{ url_for('login') }}" class="signin"><i class="fas fa-sign-in-alt" style="margin-right: 10px;"></i>ENTRAR</a>
+                    <a href="{{ url_for('register') }}" class="signup"><i class="fas fa-user-plus" style="margin-right: 10px;"></i>REGISTRAR-SE</a>
                 </div>
             {% endif %}
         </div>
