--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
                                     <div class="notice-description">
                                         <h1 class="title">{{ last_notice.title }}</h1>
                                         <p class="description">{{ last_notice.subtitle }}</p>
-                                        <p class="addedAt">{{ DatePost(last_notice.addedAt) }}</p>
+                                        <p class="addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(last_notice.addedAt) }}</p>
                                     </div>
                                 </span>
                             </a>
@@ -42,7 +42,7 @@
                                                 <div class="notice-top-description">
                                                     <h1 class="notice-top-title">{{ notice.title }}</h1>
                                                     <p class="top-description">{{ notice.subtitle }}</p>
-                                                    <p class="notice-top-addedAt">{{ DatePost(notice.addedAt) }}</p>
+                                                    <p class="notice-top-addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</p>
                                                 </div>
                                             </span>
                                         </a>
@@ -75,7 +75,7 @@
                                                     <div class="notice-description">
                                                         <h1 class="notice-title">{{ notice.title }}</h1>
                                                         <p class="notice-description">{{ notice.subtitle }}</p>
-                                                        <p class="notice-addedAt">{{ DatePost(notice.addedAt) }}</p>
+                                                        <p class="notice-addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</p>
                                                     </div>
                                                 </span>
                                             </a>
