--- a/app/templates/posts/new_post_test.html
+++ b/app/templates/posts/new_post_test.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/my_posts.css') }}">   
         <link rel="stylesheet" href="{{ url_for('static', filename='css/new_post.css') }}">    
         <link rel="stylesheet" href="{{ url_for('static', filename='css/editor.css') }}"></link>
-        <script src="https://kit.fontawesome.com/ed0f511ec4.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
@@ -25,23 +24,14 @@
                                         {{ form.title(placeholder="Título", class_="new-post-title") }}
                                         {{ form.subtitle(placeholder="Subtítulo", class_="new-post-subtitle") }}
                                         <script src="{{ url_for('static', filename='javascript/showCoverImage.js') }}"></script>
-                                        <!--{{ form.post_content(class_="new-post-text", id="CK1", oninput="if(this.scrollHeight > this.offsetHeight) this.rows += 1", cols="30", rows="10" ) }}-->
-                                        
+                                        {{ form.post_content(class_="new-post-text", id="CK1", oninput="if(this.scrollHeight > this.offsetHeight) this.rows += 1", cols="30", rows="10" ) }}
                                         <div class="editor"></div>
                                         <script src="{{ url_for('static', filename='javascript/editor.js') }}"></script>
                                         <label id="game">Escolha o jogo referente a esta notícia:</label>
                                         {{ form.game_id(for="game", class_="select-game") }}
                                     {{ form.submit(class_="submit", value="Enviar notícia" ) }}
                                 </form>
-                                <script>
-                                    const form = document.querySelector('.form-sub');
-                                    const submit = document.querySelector('.submit');
-                                    form.addEventListener('submit', () => {
-                                        submit.value = 'Enviando'
-                                        submit.style.background = '#827189'
-                                        submit.style.border = '1px solid #827189'
-                                    });
-                                </script>
+                                <script src="{{ url_for('static', filename='javascript/submitPost.js') }}"></script>
                             </div>
                         </div>
                     </div>
