--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -9,3 +9,4 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pagination.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/sub-header.css') }}">
 <script data-ad-client="ca-pub-1284323428666859" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script src="https://kit.fontawesome.com/ed0f511ec4.js" crossorigin="anonymous"></script>
