--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -28,16 +28,16 @@
                         {% endif %}
                         <span class="posted-by">{{ user.name + ' ' + user.surname + ' - @' +user.username}}</span>
                         <div class="notice-options">
-                            <p class="addedAt">{{ DatePost(notice.addedAt) }}</p>
+                            <p class="addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</p>
                             <div class="share">
                                 <a id="facebook" href="{{ notice_share('facebook') }}" target="_blank" title="Compartilhar esta notícia no Facebook">
-                                    <img src="{{ url_for('static', filename='/images/icons/facebook.svg') }}" alt="Facebook"/>
+                                    <i class="fab fa-facebook" id="facebook"></i>
                                 </a>
                                 <a id="twitter" href="{{ notice_share('twitter') }}" target="_blank" title="Compartilhar esta notícia no Twitter">
-                                    <img src="{{ url_for('static', filename='/images/icons/twitter.svg') }}" alt="Twitter"/>
+                                    <i class="fab fa-twitter" id="twitter"></i>
                                 </a>
                                 <a id="whatsapp" href="{{ notice_share('whatsapp') }}" target="_blank" title="Compartilhar esta notícia no WhatsApp">
-                                    <img src="{{ url_for('static', filename='/images/icons/whatsapp.svg') }}" alt="WhatsApp"/>
+                                    <i class="fab fa-whatsapp" id="whatsapp"></i>
                                 </a>
                             </div>
                         </div>
