Muda adiciona link das redes sociais

--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -1,20 +1,22 @@
 <div class="footer">
-    <div class="footer-1part"></div>
+    <div class="footer-1part">
+
+    </div>
     <div class="footer-2part">
         <div class="social">
-            <a href="">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="">
+            <a href="https://www.facebook.com/maisgamernews" target="_blank">
                 <i class="fab fa-facebook"></i>
             </a>
-            <a href="">
+            <a href="https://twitter.com/maisgamernews" target="_blank">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com/maisgamernews" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://discord.gg/AasVPAa" target="_blank">
                 <i class="fab fa-discord"></i>
             </a>
-            <a href="">
+            <a href="https://www.reddit.com/user/maisgamernews" target="_blank">
                 <i class="fab fa-reddit"></i>
             </a>
         </div>
