Muda redes sociais

--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -111,7 +111,7 @@
             <form class="tsf nj" action="/search" data-submitfalse="q" id="tsf" method="GET" name="f" role="search">
                 <input name="q" type="search" class="search-input" placeholder="Buscar"/>
                 {{ g.search }}
-                <button type="submit"><img src="{{ url_for('static', filename='/images/search_icon.png') }}" alt="" class="search-icon"></button>
+                <button type="submit"><i class="fas fa-search"></i></button>
             </form>
         </div>
         <div class="user-informations">
