--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -4,20 +4,26 @@
     </div>
     <div class="footer-2part">
         <div class="social">
-            <a href="https://www.facebook.com/maisgamernews" target="_blank">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="https://twitter.com/maisgamernews" target="_blank">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://www.instagram.com/maisgamernews" target="_blank">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://discord.gg/AasVPAa" target="_blank">
+            <a href="https://discord.gg/AasVPAa" target="_blank" title="Siga-nos no Discord">
                 <i class="fab fa-discord"></i>
             </a>
-            <a href="https://www.reddit.com/user/maisgamernews" target="_blank">
+            <a href="https://www.facebook.com/maisgamernews" target="_blank" title="Siga-nos no Facebook">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/maisgamernews" target="_blank" title="Siga-nos no Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.reddit.com/user/maisgamernews" target="_blank" title="Siga-nos no Reddit">
                 <i class="fab fa-reddit"></i>
+            </a>
+            <a href="https://vm.tiktok.com/JFApamJ" target="_blank" title="Siga-nos no TikTok">
+                <i class="fab fa-tiktok"></i>
+            </a>
+            <a href="https://twitter.com/maisgamernews" target="_blank" title="Siga-nos no Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UC1LPHJqjW5wMA6pDdXMnvWQ?disable_polymer=true" target="_blank" title="Siga-nos no YouTube">
+                <i class="fab fa-youtube"></i>
             </a>
         </div>
         <div class="site-name">©maisgamer.com 2020</div>
