--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -5,10 +5,12 @@
             <div class="new-post-inputs">
                 {{ form.hidden_tag() }}
                     <form action="" method="post" enctype="multipart/form-data" class="form-sub">
+                        {{ form.cover_image(class_="cover_image", id="cover_image") }}
+                        <label for="cover_image" class="image-cover-select">Selecionar capa da notícia &nbsp;<i class="fa fa-image"></i></label>
+                        <script src="{{ url_for('static', filename='javascript/showCoverImage.js') }}"></script>
+                        <img src="" alt="" class="image-cover">
                         {{ form.title(placeholder="Título", class_="new-post-title") }}
                         {{ form.subtitle(placeholder="Subtítulo", class_="new-post-subtitle") }}
-                        <label for="">Selecione a imagem capa da matéria</label>
-                        {{ form.cover_image(class_="cover_image") }}
                         <label for="">Seleciona a primeira imagem a ser mostrada no conteúdo da matéria</label>
                         {{ form.pc_image(class_="pc_image") }}
                         {{ form.pc_text(class_="new-post-text", oninput="if(this.scrollHeight > this.offsetHeight) this.rows += 1", cols="30", rows="10", placeholder="Digite o texto inicial..." ) }}
