--- a/app/static/css/notice.css
+++ b/app/static/css/notice.css
@@ -7,12 +7,17 @@
 }
 
 .web .payload .notice {
-    width: 45%;
+    width: 80%;
     margin: 20px auto;
     min-width: 700px;
     border-bottom: 2px solid #EBE8EC;
     padding-bottom: 20px;
     margin-bottom: 20px;
+}
+
+.web .payload .notice .notice-body {
+    width: 75%;
+    margin: auto;
 }
 
 .web .payload .notice img {
