--- a/app/static/css/notice.css
+++ b/app/static/css/notice.css
@@ -8,6 +8,7 @@
 
 .web .payload .notice {
     width: 80%;
+    max-width: 1200px;
     margin: 20px auto;
     min-width: 700px;
     border-bottom: 2px solid #EBE8EC;
@@ -16,7 +17,7 @@
 }
 
 .web .payload .notice .notice-body {
-    width: 75%;
+    width: 65%;
     margin: auto;
 }
 
