--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,6 +1,9 @@
 <div class="header">
     <div class="loader">
         <div class="loader-figure">
+            <div class="center-logo">
+                <img src="{{ url_for('static', filename='favicon_2.png') }}" alt="Mais Gamer">
+            </div>
         </div>
         <script>
             window.addEventListener('load', () => {
