--- a/app/templates/posts/my_posts.html
+++ b/app/templates/posts/my_posts.html
@@ -3,13 +3,13 @@
     {% if num_posts != 0 %}
         <div class="my-posts">
             {% for post in posts %}
-                <div class="body-post">
+                <div class="body-post" id="{{ post.id }}">
                     <img src="{{ post.cover_image }}" alt="" class="cover">
                     <h1 class="title">{{ post.title }}</h1>
                     <div class="options">
-                        <a href="{{ url_for('notice', id=post.id) }}" class="see">VER</a>
-                        <a href="{{ url_for('edit_post', id=post.id) }}" class="edit">EDITAR</a>
-                        <a href="{{ url_for('delete_post', id=post.id) }}" class="delete">DELETAR</a>
+                        <a href="{{ url_for('notice', id=post.id) }}" class="see"><i class="fas fa-eye" style="margin-right: 5px;"></i>VER</a>
+                        <a href="{{ url_for('edit_post', id=post.id) }}" class="edit"><i class="fas fa-pencil-alt" style="margin-right: 5px;"></i>EDITAR</a>
+                        <a href="{{ url_for('delete_post', id=post.id) }}" class="delete" id="{{ post.id }}"><i class="fas fa-trash-alt" style="margin-right: 5px;"></i>DELETAR</a>
                     </div>
                     <p><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(post.addedAt) }}</p>
                 </div>
